// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerHourPerWeekTableStat Table Should render a message indicating we no data is present 1`] = `
<div
  class="text-muted"
>
  There is no data for this period.
</div>
`;

exports[`PerHourPerWeekTableStat Table Should render the table with intervals 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="legends"
    >
      <span
        class="label mr-4 mb-2"
      >
        <span
          class="mr-2"
        >
          Least busy
        </span>
        <span
          class="rectangle mr-2"
        />
        Busiest
      </span>
      <span
        class="label mr-4 mb-2"
      >
        <span
          class="square mr-2"
        />
        Business Hours
      </span>
    </div>
  </div>
  <table
    class="hourlyTable table table-hover"
  >
    <thead>
      <tr>
        <th
          class="string"
        >
          <span>
            HOUR
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            MONDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            TUESDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            WEDNESDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            THURSDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            FRIDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            SATURDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            SUNDAY
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            00:00
          </span>
        </td>
        <td
          style="background-color: rgb(246, 249, 255);"
        >
          <div
            class="redTransparentStripes"
          />
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(246, 249, 255);"
        >
          <span>
            1
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            2
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            3
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            3
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            2
          </span>
        </td>
        <td
          style="background-color: rgb(246, 249, 255);"
        >
          <span>
            0
          </span>
        </td>
      </tr>
      <tr>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            01:00
          </span>
        </td>
        <td
          style="background-color: rgb(246, 249, 255);"
        >
          <div
            class="redTransparentStripes"
          />
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(155, 192, 252);"
        >
          <span>
            4
          </span>
        </td>
        <td
          style="background-color: rgb(155, 192, 252);"
        >
          <span>
            4
          </span>
        </td>
        <td
          style="background-color: rgb(119, 169, 250);"
        >
          <span>
            7
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            3
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            3
          </span>
        </td>
        <td
          style="background-color: rgb(210, 226, 253);"
        >
          <span>
            2
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PerHourPerWeekTableStat Table Should render the table with no interval in the legend 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="legends"
    >
      <span
        class="label mr-4 mb-2"
      >
        <span
          class="square mr-2"
        />
        Business Hours
      </span>
    </div>
  </div>
  <table
    class="hourlyTable table table-hover"
  >
    <thead>
      <tr>
        <th
          class="string"
        >
          <span>
            HOUR
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            MONDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            TUESDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            WEDNESDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            THURSDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            FRIDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            SATURDAY
          </span>
        </th>
        <th
          class="number"
        >
          <span>
            SUNDAY
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            00:00
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <div
            class="redTransparentStripes"
          />
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
      </tr>
      <tr>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            01:00
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <div
            class="redTransparentStripes"
          />
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
        <td
          style="background-color: rgb(255, 255, 255);"
        >
          <span>
            0
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PerHourPerWeekTableStat TableCells Should render with a different timezone between business hours and the current user 1`] = `
<tr>
  <td
    style="background-color: rgb(255, 255, 255);"
  >
    <span>
      00:00
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      0
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      1
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      2
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      3
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      3
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <span>
      2
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <span>
      0
    </span>
  </td>
</tr>
`;

exports[`PerHourPerWeekTableStat TableCells Should render with the same timezone for the business hours and the current user 1`] = `
<tr>
  <td
    style="background-color: rgb(255, 255, 255);"
  >
    <span>
      00:00
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <div
      class="redTransparentStripes"
    />
    <span>
      0
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <span>
      1
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <span>
      2
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <span>
      3
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <span>
      3
    </span>
  </td>
  <td
    style="background-color: rgb(210, 226, 253);"
  >
    <span>
      2
    </span>
  </td>
  <td
    style="background-color: rgb(246, 249, 255);"
  >
    <span>
      0
    </span>
  </td>
</tr>
`;
